--- a/bin/run.cmake.in
+++ b/bin/run.cmake.in
@@ -59,9 +59,9 @@ elseif(TYPE STREQUAL "doxygen")
   if(DOCS)
     file(REMOVE ${DOCS})
   endif()
-  file(COPY C:/Programming/physiology/src/docs/Doxygen/bootstrap DESTINATION ./docs/html)
-  file(COPY C:/Programming/physiology/src/docs/Doxygen/font-awesome-4.3.0 DESTINATION ./docs/html)
-  file(COPY C:/Programming/physiology/src/docs/Images DESTINATION ./docs/html)
+  file(COPY @DATA_ROOT@/docs/Doxygen/bootstrap DESTINATION ./docs/html)
+  file(COPY @DATA_ROOT@/docs/Doxygen/font-awesome-4.3.0 DESTINATION ./docs/html)
+  file(COPY @DATA_ROOT@/docs/Images DESTINATION ./docs/html)
   # These are run above
   #execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.testing.validation.SystemValidation)
   #execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.testing.validation.PatientValidation)
