--- a/schema/.project
+++ b/schema/.project
@@ -16,14 +16,14 @@
 	</natures>
 	<linkedResources>
 		<link>
-			<name>java</name>
+			<name>bind</name>
 			<type>2</type>
-			<location>C:/Programming/physiology/builds/x64/InnerBuild/schema/java</location>
+			<location>C:/Programming/physiology/build/x64/InnerBuild/schema/java</location>
 		</link>
 		<link>
 			<name>protobuf</name>
 			<type>2</type>
-			<location>C:/Programming/physiology/builds/x64/protobuf/src/protobuf/java/core/src/main/java</location>
+			<location>C:/Programming/physiology/build/x64/protobuf/src/protobuf/java/core/src/main/java</location>
 		</link>
 	</linkedResources>
 </projectDescription>
