CDMUnitTests are running
Seperated substances from compounds (directory wise)
Needs a rebase
Serialization test could be better, do a check sum on binary buffers (unload vs unload load unload)
I think I got rid of XML everywhere...

--- a/test/config/CDMUnitTests.config
+++ b/test/config/CDMUnitTests.config
@@ -146,18 +146,18 @@ PreChargeComplianceZeroVolume = CDMUnitTest
 PreChargeComplianceNonZeroVolume = CDMUnitTest
 #This test is not flushed out, and that's ok
 #CircuitErrorTest = CDMUnitTest
-CircuitLockingTest = CDMUnitTestDriver NoCompare Computed=./UnitTests/CDMTests/
+CircuitLockingTest = CDMUnitTestDriver NoCompare Computed=./test_results/unit_tests/cdm/
     
 @group File I/O    
-ReadPatientDirectory = CDMUnitTestDriver NoCompare Computed=./UnitTests/CDMTests/
-ReadScenarios = CDMUnitTestDriver NoCompare Computed=./UnitTests/CDMTests/
-ReadSubstanceDirectory = CDMUnitTestDriver NoCompare Computed=./UnitTests/CDMTests/
+ReadPatientDirectory = CDMUnitTestDriver NoCompare Computed=./test_results/unit_tests/cdm/
+*ReadScenarios = CDMUnitTestDriver NoCompare Computed=./test_results/unit_tests/cdm/
+ReadSubstanceDirectory = CDMUnitTestDriver NoCompare Computed=./test_results/unit_tests/cdm/
 
 @group Compartments  
-GasCompartmentTest = CDMUnitTestDriver NoCompare Computed=./UnitTests/CDMTests/
-LiquidCompartmentTest = CDMUnitTestDriver NoCompare Computed=./UnitTests/CDMTests/
-ThermalCompartmentTest = CDMUnitTestDriver NoCompare Computed=./UnitTests/CDMTests/
-TissueCompartmentTest = CDMUnitTestDriver NoCompare Computed=./UnitTests/CDMTests/
+GasCompartmentTest = CDMUnitTestDriver NoCompare Computed=./test_results/unit_tests/cdm/
+LiquidCompartmentTest = CDMUnitTestDriver NoCompare Computed=./test_results/unit_tests/cdm/
+ThermalCompartmentTest = CDMUnitTestDriver NoCompare Computed=./test_results/unit_tests/cdm/
+TissueCompartmentTest = CDMUnitTestDriver NoCompare Computed=./test_results/unit_tests/cdm/
 
 @group Transport
 LargeFlowTransport = CDMUnitTest
