--- a/test/config/DebugRun.config
+++ b/test/config/DebugRun.config
@@ -21,12 +21,16 @@ Threads=-1
 #AutoSerialization=./states/testing/,5,Off,On,On
 
 Executor=mil.tatrc.physiology.datamodel.testing.CDMUnitTestDriver
-Executor=mil.tatrc.physiology.biogears.testing.BGEUnitTestDriver
-Executor=mil.tatrc.physiology.biogears.testing.ScenarioTestDriver
+#Executor=mil.tatrc.physiology.biogears.testing.BGEUnitTestDriver
+#Executor=mil.tatrc.physiology.biogears.testing.ScenarioTestDriver
 
-Macro CDMUnitTest=CDMUnitTestDriver FastPlotErrors Baseline=UnitTests/CDMTests/ Computed=./test_results/unit_tests/cdm/
-Macro BGEUnitTest=BGEUnitTestDriver FastPlot Baseline=UnitTests/BioGearsTests/ Computed=./test_results/unit_tests/biogears/
-Macro BGEUnitTestFull=BGEUnitTestDriver FullPlot Baseline=UnitTests/BioGearsTests/ Computed=./test_results/unit_tests/biogears/
-Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=Scenarios/ Computed=./test_results/scenarios/ #Results=/BasicStandard
+Macro CDMUnitTest=CDMUnitTestDriver FastPlotErrors Baseline=UnitTests/CDMTests/ Computed=./test_results/unit_tests/cdm
+#Macro BGEUnitTest=BGEUnitTestDriver FastPlot Baseline=UnitTests/BioGearsTests/ Computed=./test_results/unit_tests/biogears
+#Macro BGEUnitTestFull=BGEUnitTestDriver FullPlot Baseline=UnitTests/BioGearsTests/ Computed=./test_results/unit_tests/biogears
+#Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=Scenarios/ Computed=./test_results/scenarios #Results=/BasicStandard
 
-Patient/BasicStandard.xml = ScenarioTest
+@group Simple Circuits
+BadDiodeDC = CDMUnitTest
+
+@group File I/O    
+ReadPatientDirectory = CDMUnitTestDriver NoCompare Computed=./test_results/unit_tests/cdm
