--- a/test/.project
+++ b/test/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>BioGearsTesting</name>
+	<name>Testing</name>
 	<comment></comment>
 	<projects>
 	</projects>
