--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,3 @@
 include(${CMAKE_CURRENT_SOURCE_DIR}/CDMUnitTests.cmake)
-include(${CMAKE_CURRENT_SOURCE_DIR}/BioGearsUnitTests.cmake)
+include(${CMAKE_CURRENT_SOURCE_DIR}/EngineUnitTests.cmake)
 include(${CMAKE_CURRENT_SOURCE_DIR}/UnitTestDriver.cmake)
