Start of engine serialization refactoring
Renamed engine
Fixed most of the unit tests and systems
Moved ECG Interpolation back into CDM

--- a/sdk/.project
+++ b/sdk/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>BioGearsHowTo</name>
+	<name>HowTo</name>
 	<comment></comment>
 	<projects>
 	</projects>
