Fixed recursive build and JNI Bridge bugs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,9 +62,8 @@ if(UNIX AND NOT APPLE)
 endif()
 
 set (SUPERBUILD ON CACHE BOOL "Initial pull and build of all dependent libraries/executables")
-if(${SUPERBUILD})
+if(SUPERBUILD)
   include(SuperBuild.cmake)
-  return()
 else()
-  include(Engine.cmake)
+  include(Pulse.cmake)
 endif()
