--- a/bin/run.cmake.in
+++ b/bin/run.cmake.in
@@ -67,14 +67,13 @@ elseif(TYPE STREQUAL "doxygen")
   #execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.testing.validation.PatientValidation)
   execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.datamodel.doxygen.DoxygenPreprocessor @DATA_ROOT@/docs/Markdown ./docs/markdown)
   execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.datamodel.doxygen.DoxygenPreprocessor @DATA_ROOT@/docs/Methodology ./docs/markdown)
-  execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.datamodel.doxygen.XSDToDoxygen ./xsd/DataModel.xsd ./docs/markdown/xsd.ixx)
   execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.datamodel.doxygen.CDM2MD ./docs/markdown)
   execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.utilities.csv.plots.PlotDriver PlotRun.config)
   execute_process(COMMAND doxygen ./docs/full.doxy)
 elseif(TYPE STREQUAL "protoc")
   execute_process(COMMAND ${CMAKE_COMMAND} -DSCHEMA_SRC:STRING=@SCHEMA_SRC@ -DSCHEMA_DST:STRING=@SCHEMA_DST@ -P @DATA_ROOT@/schema/GenerateCDMBindings.cmake)
 elseif(TYPE STREQUAL "updateBaselines")
-  execute_process(COMMAND ${CMAKE_COMMAND} --build @CMAKE_BINARY_DIR@ --target UpdateVerification)
+  execute_process(COMMAND ${CMAKE_COMMAND} --build @CMAKE_CURRENT_BINARY_DIR@ --target UpdateVerification)
 else()
   execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.testing.SETestDriver ${TYPE}.config)
 endif()
