--- a/test/config/DebugRun.config
+++ b/test/config/DebugRun.config
@@ -17,17 +17,17 @@ Threads=-1
 # These are used for testing and utilizing serialization
 #Patients=all
 # Replace patient file with it's associated patient state, if scenario has no conditions
-UseStates=true
+#UseStates=true
 # AutoSerialize = Directory,Period(in seconds, 0 turns off constant saving),TimeStampPeriods,AfterActions,Reload
 #AutoSerialization=./states/testing/,5,Off,On,On
 
 Executor=mil.tatrc.physiology.datamodel.testing.CDMUnitTestDriver
-Executor=mil.tatrc.physiology.pulse.testing.UnitTestDriver
+Executor=mil.tatrc.physiology.pulse.testing.EngineUnitTestDriver
 Executor=mil.tatrc.physiology.pulse.testing.ScenarioTestDriver
 
-Macro CDMUnitTest=CDMUnitTestDriver FastPlotErrors Baseline=UnitTests/CDMTests/ Computed=./test_results/unit_tests/cdm
-Macro BGEUnitTest=BGEUnitTestDriver FastPlot Baseline=UnitTests/PulseTests/ Computed=./test_results/unit_tests/pulse
-Macro BGEUnitTestFull=BGEUnitTestDriver FullPlot Baseline=UnitTests/PulseTests/ Computed=./test_results/unit_tests/pulse
-Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=Scenarios/ Computed=./test_results/scenarios #Results=/BasicStandard
+Macro CDMUnitTest=CDMUnitTestDriver FastPlotErrors Baseline=unit_tests/cdm/ Computed=./test_results/unit_tests/cdm
+Macro EngineUnitTest=EngineUnitTestDriver FastPlot Baseline=unit_tests/pulse/ Computed=./test_results/unit_tests/pulse
+Macro EngineUnitTestFull=EngineUnitTestDriver FullPlot Baseline=unit_tests/pulse/ Computed=./test_results/unit_tests/pulse
+Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=scenarios/ Computed=./test_results/scenarios
 
 Patient/BasicStandard.pba = ScenarioTest
