--- a/bin/run.cmake.in
+++ b/bin/run.cmake.in
@@ -23,19 +23,19 @@ endif()
 #set(Java_JAVA_EXECUTABLE "/the_jdk_I_want/bin/java)
 
 set(JAVA_CLASSPATH Pulse.jar
-        @DATA_ROOT@/jar/javassist-3.16.1-GA.jar
-        @DATA_ROOT@/jar/jcommon-1.0.16.jar
-        @DATA_ROOT@/jar/jdom-2.0.2.jar
-        @DATA_ROOT@/jar/jfreechart-1.0.13.jar
-        @DATA_ROOT@/jar/guava-11.0.2.jar
-        @DATA_ROOT@/jar/log4j-1.2.17.jar
-        @DATA_ROOT@/jar/poi-3.13-20150929.jar
-        @DATA_ROOT@/jar/poi-ooxml-3.13-20150929.jar
-        @DATA_ROOT@/jar/poi-ooxml-schemas-3.13-20150929.jar
-        @DATA_ROOT@/jar/pdfbox-2.0.0-RC3.jar
-        @DATA_ROOT@/jar/reflections-0.9.9-RC1-uberjar.jar
-        @DATA_ROOT@/jar/xmlbeans-2.6.0.jar
-        @DATA_ROOT@/jar/zip4j-1.3.1.jar)
+        @CMAKE_SOURCE_DIR@/jar/javassist-3.16.1-GA.jar
+        @CMAKE_SOURCE_DIR@/jar/jcommon-1.0.16.jar
+        @CMAKE_SOURCE_DIR@/jar/jdom-2.0.2.jar
+        @CMAKE_SOURCE_DIR@/jar/jfreechart-1.0.13.jar
+        @CMAKE_SOURCE_DIR@/jar/guava-11.0.2.jar
+        @CMAKE_SOURCE_DIR@/jar/log4j-1.2.17.jar
+        @CMAKE_SOURCE_DIR@/jar/poi-3.13-20150929.jar
+        @CMAKE_SOURCE_DIR@/jar/poi-ooxml-3.13-20150929.jar
+        @CMAKE_SOURCE_DIR@/jar/poi-ooxml-schemas-3.13-20150929.jar
+        @CMAKE_SOURCE_DIR@/jar/pdfbox-2.0.0-RC3.jar
+        @CMAKE_SOURCE_DIR@/jar/reflections-0.9.9-RC1-uberjar.jar
+        @CMAKE_SOURCE_DIR@/jar/xmlbeans-2.6.0.jar
+        @CMAKE_SOURCE_DIR@/jar/zip4j-1.3.1.jar)
 
 if(NOT WIN32)
   string(REPLACE ";" ":" JAVA_CLASSPATH "${JAVA_CLASSPATH}")
@@ -59,19 +59,19 @@ elseif(TYPE STREQUAL "doxygen")
   if(DOCS)
     file(REMOVE ${DOCS})
   endif()
-  file(COPY @DATA_ROOT@/docs/Doxygen/bootstrap DESTINATION ./docs/html)
-  file(COPY @DATA_ROOT@/docs/Doxygen/font-awesome-4.3.0 DESTINATION ./docs/html)
-  file(COPY @DATA_ROOT@/docs/Images DESTINATION ./docs/html)
+  file(COPY @CMAKE_SOURCE_DIR@/docs/Doxygen/bootstrap DESTINATION ./docs/html)
+  file(COPY @CMAKE_SOURCE_DIR@/docs/Doxygen/font-awesome-4.3.0 DESTINATION ./docs/html)
+  file(COPY @CMAKE_SOURCE_DIR@/docs/Images DESTINATION ./docs/html)
   # These are run above
   #execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.testing.validation.SystemValidation)
   #execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.testing.validation.PatientValidation)
-  execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.datamodel.doxygen.DoxygenPreprocessor @DATA_ROOT@/docs/Markdown ./docs/markdown)
-  execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.datamodel.doxygen.DoxygenPreprocessor @DATA_ROOT@/docs/Methodology ./docs/markdown)
+  execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.datamodel.doxygen.DoxygenPreprocessor @CMAKE_SOURCE_DIR@/docs/Markdown ./docs/markdown)
+  execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.datamodel.doxygen.DoxygenPreprocessor @CMAKE_SOURCE_DIR@/docs/Methodology ./docs/markdown)
   execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.datamodel.doxygen.CDM2MD ./docs/markdown)
   execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.utilities.csv.plots.PlotDriver PlotRun.config)
   execute_process(COMMAND doxygen ./docs/full.doxy)
 elseif(TYPE STREQUAL "protoc")
-  execute_process(COMMAND ${CMAKE_COMMAND} -DSCHEMA_SRC:STRING=@SCHEMA_SRC@ -DSCHEMA_DST:STRING=@SCHEMA_DST@ -P @DATA_ROOT@/schema/GenerateCDMBindings.cmake)
+  execute_process(COMMAND ${CMAKE_COMMAND} -DSCHEMA_SRC:STRING=@SCHEMA_SRC@ -DSCHEMA_DST:STRING=@SCHEMA_DST@ -P @CMAKE_SOURCE_DIR@/schema/GenerateCDMBindings.cmake)
 elseif(TYPE STREQUAL "updateBaselines")
   execute_process(COMMAND ${CMAKE_COMMAND} --build @CMAKE_CURRENT_BINARY_DIR@ --target UpdateVerification)
 else()
