--- a/test/.classpath
+++ b/test/.classpath
@@ -7,17 +7,19 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/CommonDataModel"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/DataModelBindings"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Engine"/>
-	<classpathentry kind="var" path="PHYSIOLOGY_HOME/jar/commons-logging-1.2.jar"/>
-	<classpathentry kind="var" path="PHYSIOLOGY_HOME/jar/guava-11.0.2.jar"/>
-	<classpathentry kind="var" path="PHYSIOLOGY_HOME/jar/jcommon-1.0.16.jar"/>
-	<classpathentry kind="var" path="PHYSIOLOGY_HOME/jar/jdom-2.0.2.jar"/>
-	<classpathentry kind="var" path="PHYSIOLOGY_HOME/jar/jfreechart-1.0.13.jar"/>
-	<classpathentry kind="var" path="PHYSIOLOGY_HOME/jar/log4j-1.2.17.jar"/>
-	<classpathentry kind="var" path="PHYSIOLOGY_HOME/jar/pdfbox-2.0.0-RC3.jar"/>
-	<classpathentry kind="var" path="PHYSIOLOGY_HOME/jar/poi-3.13-20150929.jar"/>
-	<classpathentry kind="var" path="PHYSIOLOGY_HOME/jar/poi-ooxml-3.13-20150929.jar"/>
-	<classpathentry kind="var" path="PHYSIOLOGY_HOME/jar/poi-ooxml-schemas-3.13-20150929.jar"/>
-	<classpathentry kind="var" path="PHYSIOLOGY_HOME/jar/reflections-0.9.9-RC1-uberjar.jar"/>
-	<classpathentry kind="var" path="PHYSIOLOGY_HOME/jar/zip4j-1.3.1.jar"/>
+	<classpathentry kind="var" path="SOURCE_DIR/jar/commons-logging-1.2.jar"/>
+	<classpathentry kind="var" path="SOURCE_DIR/jar/guava-11.0.2.jar"/>
+	<classpathentry kind="var" path="SOURCE_DIR/jar/javassist-3.16.1-GA.jar"/>
+	<classpathentry kind="var" path="SOURCE_DIR/jar/jcommon-1.0.16.jar"/>
+	<classpathentry kind="var" path="SOURCE_DIR/jar/jdom-2.0.2.jar"/>
+	<classpathentry kind="var" path="SOURCE_DIR/jar/jfreechart-1.0.13.jar"/>
+	<classpathentry kind="var" path="SOURCE_DIR/jar/log4j-1.2.17.jar"/>
+	<classpathentry kind="var" path="SOURCE_DIR/jar/pdfbox-2.0.0-RC3.jar"/>
+	<classpathentry kind="var" path="SOURCE_DIR/jar/poi-3.13-20150929.jar"/>
+	<classpathentry kind="var" path="SOURCE_DIR/jar/poi-ooxml-3.13-20150929.jar"/>
+	<classpathentry kind="var" path="SOURCE_DIR/jar/poi-ooxml-schemas-3.13-20150929.jar"/>
+	<classpathentry kind="var" path="SOURCE_DIR/jar/reflections-0.9.9-RC1-uberjar.jar"/>
+	<classpathentry kind="var" path="SOURCE_DIR/jar/xmlbeans-2.6.0.jar"/>
+	<classpathentry kind="var" path="SOURCE_DIR/jar/zip4j-1.3.1.jar"/>
 	<classpathentry kind="output" path="build/java"/>
 </classpath>
