--- a/test/config/DebugPlots.config
+++ b/test/config/DebugPlots.config
@@ -45,7 +45,7 @@
 #           Whatever you enter for X2 and Y2 will be the headers pulled from the experimental data file.
 
 # FLAGS FOR RESPIRATORY PFT PLOTTER ONLY
-# PFTFile - Specify the path and filename for the .xml containing the PFT data you want to plot (No spaces allowed)
+# PFTFile - Specify the path and filename for the .pba containing the PFT data you want to plot (No spaces allowed)
 
 Plotter=mil.tatrc.physiology.utilities.csv.plots.ActionEventPlotter
 Plotter=mil.tatrc.physiology.utilities.csv.plots.MultiPlotter
