--- a/test/config/InitialPatientStates.config
+++ b/test/config/InitialPatientStates.config
@@ -16,10 +16,10 @@ Patients=all
 # AutoSerialize = Directory,Period(in seconds, 0 turns off constant saving),TimeStampPeriods,AfterActions,Reload
 #AutoSerialization=./states/testing/,5,Off,On,On
 
-Executor=mil.tatrc.physiology.biogears.testing.ScenarioTestDriver
+Executor=mil.tatrc.physiology.pulse.testing.ScenarioTestDriver
 
-Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=Scenarios/ Computed=./test_results/scenarios/
+Macro ScenarioRun=ScenarioTestDriver NoPlot Scenario=./ Computed=./test_results/scenarios/
 
 @group
 
-InitialPatientState.xml = ScenarioTest
+InitialPatientState.pba = ScenarioRun
