--- a/test/config/LongVerificationScenarios.config
+++ b/test/config/LongVerificationScenarios.config
@@ -26,4 +26,4 @@ Executor=mil.tatrc.physiology.biogears.testing.ScenarioTestDriver
 
 Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=Scenarios/ Computed=./test_results/scenarios/
 
-Miscellaneous/12hrFast.xml = ScenarioTest
+Miscellaneous/12hrFast.pba = ScenarioTest
