SDK is running with a few issues, those should be fixed when scenarios are all ok

--- a/bin/run.cmake.in
+++ b/bin/run.cmake.in
@@ -43,15 +43,15 @@ endif()
 
 
 if(TYPE STREQUAL "SystemValidation")
-  execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.testing.TestDriver ValidationSystems.config)
+  execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.testing.SETestDriver ValidationSystems.config)
   execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.testing.validation.SystemValidation )
 elseif(TYPE STREQUAL "PatientValidation")
-  execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.testing.TestDriver ValidationPatients.config)
+  execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.testing.SETestDriver ValidationPatients.config)
   execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.testing.validation.PatientValidation)
 elseif(TYPE STREQUAL "genData")
   execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.pulse.dataset.DataSetReader)
 elseif(TYPE STREQUAL "genStates")
-  execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.testing.TestDriver InitialPatientStates.config)
+  execute_process(COMMAND "${Java_JAVA_EXECUTABLE}" -Xmx900m -classpath "${JAVA_CLASSPATH}" mil.tatrc.physiology.testing.SETestDriver InitialPatientStates.config)
 elseif(TYPE STREQUAL "doxygen")
   file(MAKE_DIRECTORY  "./docs/html")
   file(MAKE_DIRECTORY  "./docs/markdown")
