--- a/test/config/CDMUnitTests.config
+++ b/test/config/CDMUnitTests.config
@@ -150,7 +150,7 @@ CircuitLockingTest = CDMUnitTestDriver NoCompare Computed=./test_results/unit_te
     
 @group File I/O    
 ReadPatientDirectory = CDMUnitTestDriver NoCompare Computed=./test_results/unit_tests/cdm/
-*ReadScenarios = CDMUnitTestDriver NoCompare Computed=./test_results/unit_tests/cdm/
+ReadScenarios = CDMUnitTestDriver NoCompare Computed=./test_results/unit_tests/cdm/
 ReadSubstanceDirectory = CDMUnitTestDriver NoCompare Computed=./test_results/unit_tests/cdm/
 
 @group Compartments  
