Modified config files to use converted pba (instad of xml)

--- a/test/config/ValidationDrugs.config
+++ b/test/config/ValidationDrugs.config
@@ -25,17 +25,17 @@ Executor=mil.tatrc.physiology.biogears.testing.ScenarioTestDriver
 Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=Scenarios/ Computed=./test_results/scenarios/ #Results=/BasicStandard
 
 
-Validation/AlbuterolValidation.xml=ScenarioTest
-#Validation/DesfluraneValidation.xml=ScenarioTest
-Validation/EpinephrineValidation.xml=ScenarioTest
-Validation/FentanylValidation.xml=ScenarioTest
-Validation/FurosemideValidation.xml=ScenarioTest
-Validation/KetamineValidation.xml=ScenarioTest
-Validation/MidazolamValidation.xml=ScenarioTest
-Validation/MorphineValidation.xml=ScenarioTest
-Validation/NaloxoneValidation.xml=ScenarioTest
-Validation/PralidoximeValidation.xml=ScenarioTest
-Validation/PrednisoneValidation.xml=ScenarioTest
-Validation/PropofolValidation.xml=ScenarioTest
-Validation/RocuroniumValidation.xml=ScenarioTest
-Validation/SuccinylcholineValidation.xml=ScenarioTest
+Validation/AlbuterolValidation.pba=ScenarioTest
+#Validation/DesfluraneValidation.pba=ScenarioTest
+Validation/EpinephrineValidation.pba=ScenarioTest
+Validation/FentanylValidation.pba=ScenarioTest
+Validation/FurosemideValidation.pba=ScenarioTest
+Validation/KetamineValidation.pba=ScenarioTest
+Validation/MidazolamValidation.pba=ScenarioTest
+Validation/MorphineValidation.pba=ScenarioTest
+Validation/NaloxoneValidation.pba=ScenarioTest
+Validation/PralidoximeValidation.pba=ScenarioTest
+Validation/PrednisoneValidation.pba=ScenarioTest
+Validation/PropofolValidation.pba=ScenarioTest
+Validation/RocuroniumValidation.pba=ScenarioTest
+Validation/SuccinylcholineValidation.pba=ScenarioTest
