--- a/test/config/ValidationPatients.config
+++ b/test/config/ValidationPatients.config
@@ -22,5 +22,5 @@ Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=Scenarios/ Computed=./te
 
 @group
 
-Validation/Patient-Validation.xml = ScenarioTest
+Validation/Patient-Validation.pba = ScenarioTest
 
