--- a/test/config/ValidationSystems.config
+++ b/test/config/ValidationSystems.config
@@ -22,12 +22,12 @@ Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=Scenarios/ Computed=./te
 
 @group
 
-Validation/BloodChemistryValidation.xml = ScenarioTest
-Validation/CardiovascularValidation.xml = ScenarioTest
-Validation/EndocrineValidation.xml = ScenarioTest
-Validation/EnergyValidation.xml = ScenarioTest
-Validation/GastrointestinalValidation.xml = ScenarioTest
-Validation/NervousValidation.xml = ScenarioTest
-Validation/RenalValidation.xml = ScenarioTest
-Validation/RespiratoryValidation.xml = ScenarioTest
-Validation/TissueValidation.xml = ScenarioTest
+Validation/BloodChemistryValidation.pba = ScenarioTest
+Validation/CardiovascularValidation.pba = ScenarioTest
+Validation/EndocrineValidation.pba = ScenarioTest
+Validation/EnergyValidation.pba = ScenarioTest
+Validation/GastrointestinalValidation.pba = ScenarioTest
+Validation/NervousValidation.pba = ScenarioTest
+Validation/RenalValidation.pba = ScenarioTest
+Validation/RespiratoryValidation.pba = ScenarioTest
+Validation/TissueValidation.pba = ScenarioTest
