--- a/test/config/VerificationScenarios.config
+++ b/test/config/VerificationScenarios.config
@@ -28,139 +28,139 @@ Macro ScenarioTest=ScenarioTestDriver FastPlot Baseline=Scenarios/ Computed=./te
 
 @group
 
-Patient/BasicStandard.xml = ScenarioTest
+Patient/BasicStandard.pba = ScenarioTest
 
 @group Patient
-Patient/AirwayObstructionVaried.xml = ScenarioTest
-Patient/AcuteStress.xml = ScenarioTest
-Patient/AsthmaAttackModerateAcute.xml = ScenarioTest
-Patient/AsthmaAttackSevereAcute.xml = ScenarioTest
-Patient/AsthmaAttackLifeThreateningAcute.xml = ScenarioTest
-Patient/Anemia30.xml = ScenarioTest
-Patient/ApneaVaried.xml = ScenarioTest
-Patient/Baroreceptors.xml = ScenarioTest
-Patient/BrainInjury.xml = ScenarioTest
-Patient/BronchoConstrictionVaried.xml = ScenarioTest
-Patient/COPDSevereEmphysema.xml = ScenarioTest
-Patient/COPDSevereBronchitis.xml = ScenarioTest
-Patient/Cough.xml = ScenarioTest
-Patient/CPRForceScaleMax.xml = ScenarioTest
-Patient/CPRForceScale.xml = ScenarioTest
-Patient/CPRForce.xml = ScenarioTest
-Patient/EffusionCondition.xml = ScenarioTest
-Patient/EffusionConditionPlus.xml = ScenarioTest
-Patient/EsophagealIntubation.xml = ScenarioTest
-Patient/HemorrhageClass2NoFluid.xml = ScenarioTest
-Patient/HemorrhageClass2Blood.xml = ScenarioTest
-Patient/HemorrhageClass2Saline.xml = ScenarioTest
-Patient/HemorrhageClass4NoFluid.xml = ScenarioTest
-Patient/HemorrhageCM1.xml = ScenarioTest
-Patient/HemorrhageCM2.xml = ScenarioTest
-Patient/Inhaler_OneActuation.xml = ScenarioTest
-Patient/Inhaler_OneActuationWithSpacer.xml = ScenarioTest
-Patient/Inhaler_OneActuationIncorrectUse.xml = ScenarioTest
-Patient/Inhaler_OneActuationWithSpacerIncorrectUse.xml = ScenarioTest
-Patient/Inhaler_TwoActuations.xml = ScenarioTest
-Patient/LobarPneumoniaModerateBothLungs.xml = ScenarioTest
-Patient/LobarPneumoniaSevereLeftLobe.xml = ScenarioTest
-Patient/LobarPneumoniaSevereRightLung.xml = ScenarioTest
-Patient/MainstemIntubation.xml = ScenarioTest
-Patient/RenalStenosisSevereBilateral.xml = ScenarioTest
-Patient/RenalStenosisModerateUnilateral.xml = ScenarioTest
-Patient/SinusBradycardia.xml = ScenarioTest
-Patient/SinusTachycardia.xml = ScenarioTest
-Patient/TensionPneumothoraxBilateral.xml = ScenarioTest
-Patient/TensionPneumothoraxClosedVaried.xml = ScenarioTest
-Patient/TensionPneumothoraxOpenVaried.xml = ScenarioTest
-Patient/VentricularSystolicDysfunction.xml = ScenarioTest
+Patient/AirwayObstructionVaried.pba = ScenarioTest
+Patient/AcuteStress.pba = ScenarioTest
+Patient/AsthmaAttackModerateAcute.pba = ScenarioTest
+Patient/AsthmaAttackSevereAcute.pba = ScenarioTest
+Patient/AsthmaAttackLifeThreateningAcute.pba = ScenarioTest
+Patient/Anemia30.pba = ScenarioTest
+Patient/ApneaVaried.pba = ScenarioTest
+Patient/Baroreceptors.pba = ScenarioTest
+Patient/BrainInjury.pba = ScenarioTest
+Patient/BronchoConstrictionVaried.pba = ScenarioTest
+Patient/COPDSevereEmphysema.pba = ScenarioTest
+Patient/COPDSevereBronchitis.pba = ScenarioTest
+Patient/Cough.pba = ScenarioTest
+Patient/CPRForceScaleMax.pba = ScenarioTest
+Patient/CPRForceScale.pba = ScenarioTest
+Patient/CPRForce.pba = ScenarioTest
+Patient/EffusionCondition.pba = ScenarioTest
+Patient/EffusionConditionPlus.pba = ScenarioTest
+Patient/EsophagealIntubation.pba = ScenarioTest
+Patient/HemorrhageClass2NoFluid.pba = ScenarioTest
+Patient/HemorrhageClass2Blood.pba = ScenarioTest
+Patient/HemorrhageClass2Saline.pba = ScenarioTest
+Patient/HemorrhageClass4NoFluid.pba = ScenarioTest
+Patient/HemorrhageCM1.pba = ScenarioTest
+Patient/HemorrhageCM2.pba = ScenarioTest
+Patient/Inhaler_OneActuation.pba = ScenarioTest
+Patient/Inhaler_OneActuationWithSpacer.pba = ScenarioTest
+Patient/Inhaler_OneActuationIncorrectUse.pba = ScenarioTest
+Patient/Inhaler_OneActuationWithSpacerIncorrectUse.pba = ScenarioTest
+Patient/Inhaler_TwoActuations.pba = ScenarioTest
+Patient/LobarPneumoniaModerateBothLungs.pba = ScenarioTest
+Patient/LobarPneumoniaSevereLeftLobe.pba = ScenarioTest
+Patient/LobarPneumoniaSevereRightLung.pba = ScenarioTest
+Patient/MainstemIntubation.pba = ScenarioTest
+Patient/RenalStenosisSevereBilateral.pba = ScenarioTest
+Patient/RenalStenosisModerateUnilateral.pba = ScenarioTest
+Patient/SinusBradycardia.pba = ScenarioTest
+Patient/SinusTachycardia.pba = ScenarioTest
+Patient/TensionPneumothoraxBilateral.pba = ScenarioTest
+Patient/TensionPneumothoraxClosedVaried.pba = ScenarioTest
+Patient/TensionPneumothoraxOpenVaried.pba = ScenarioTest
+Patient/VentricularSystolicDysfunction.pba = ScenarioTest
 
 @group EnergyEnvironment
-EnergyEnvironment/CarbonMonoxideExtreme.xml = ScenarioTest
-EnergyEnvironment/CarbonMonoxideThreshold.xml = ScenarioTest
-#EnergyEnvironment/CarbonMonoxideThresholdLong.xml = ScenarioTest
-EnergyEnvironment/ColdWaterSubmersion.xml = ScenarioTest
-EnergyEnvironment/ExerciseStages.xml = ScenarioTest
-EnergyEnvironment/ExerciseVO2max.xml = ScenarioTest
-EnergyEnvironment/FireFighter.xml = ScenarioTest
-EnergyEnvironment/HighAltitudeEnvironmentChange.xml = ScenarioTest
-EnergyEnvironment/HighAltitudeEnvironmentFileChange.xml = ScenarioTest
-EnergyEnvironment/InitialHighAltitudeEnvironmentFile.xml = ScenarioTest
-EnergyEnvironment/InitialHighAltitudeEnvironmentState.xml = ScenarioTest
-EnergyEnvironment/ThermalApplication.xml = ScenarioTest
+EnergyEnvironment/CarbonMonoxideExtreme.pba = ScenarioTest
+EnergyEnvironment/CarbonMonoxideThreshold.pba = ScenarioTest
+#EnergyEnvironment/CarbonMonoxideThresholdLong.pba = ScenarioTest
+EnergyEnvironment/ColdWaterSubmersion.pba = ScenarioTest
+EnergyEnvironment/ExerciseStages.pba = ScenarioTest
+EnergyEnvironment/ExerciseVO2max.pba = ScenarioTest
+EnergyEnvironment/FireFighter.pba = ScenarioTest
+EnergyEnvironment/HighAltitudeEnvironmentChange.pba = ScenarioTest
+EnergyEnvironment/HighAltitudeEnvironmentFileChange.pba = ScenarioTest
+EnergyEnvironment/InitialHighAltitudeEnvironmentFile.pba = ScenarioTest
+EnergyEnvironment/InitialHighAltitudeEnvironmentState.pba = ScenarioTest
+EnergyEnvironment/ThermalApplication.pba = ScenarioTest
 
 @group Anesthesia Machine
-AnesthesiaMachine/EndotrachealTubeLeakVaried.xml = ScenarioTest
-AnesthesiaMachine/ExpiratoryValveObstructionVaried.xml = ScenarioTest
-AnesthesiaMachine/ExpiratoryValveLeakVaried.xml = ScenarioTest
-AnesthesiaMachine/InspiratoryValveObstructionVaried.xml = ScenarioTest
-AnesthesiaMachine/InspiratoryValveLeakVaried.xml = ScenarioTest
-AnesthesiaMachine/MaskLeakVaried.xml = ScenarioTest
-AnesthesiaMachine/OxygenTankPressureLoss.xml = ScenarioTest
-AnesthesiaMachine/OxygenWallPressureLoss.xml = ScenarioTest
-AnesthesiaMachine/SodaLimeFailureVaried.xml = ScenarioTest
-AnesthesiaMachine/VaporizerFailureVaried.xml = ScenarioTest
-AnesthesiaMachine/VentilatorPressureLossVaried.xml = ScenarioTest
-AnesthesiaMachine/YpieceDisconnectVaried.xml = ScenarioTest
+AnesthesiaMachine/EndotrachealTubeLeakVaried.pba = ScenarioTest
+AnesthesiaMachine/ExpiratoryValveObstructionVaried.pba = ScenarioTest
+AnesthesiaMachine/ExpiratoryValveLeakVaried.pba = ScenarioTest
+AnesthesiaMachine/InspiratoryValveObstructionVaried.pba = ScenarioTest
+AnesthesiaMachine/InspiratoryValveLeakVaried.pba = ScenarioTest
+AnesthesiaMachine/MaskLeakVaried.pba = ScenarioTest
+AnesthesiaMachine/OxygenTankPressureLoss.pba = ScenarioTest
+AnesthesiaMachine/OxygenWallPressureLoss.pba = ScenarioTest
+AnesthesiaMachine/SodaLimeFailureVaried.pba = ScenarioTest
+AnesthesiaMachine/VaporizerFailureVaried.pba = ScenarioTest
+AnesthesiaMachine/VentilatorPressureLossVaried.pba = ScenarioTest
+AnesthesiaMachine/YpieceDisconnectVaried.pba = ScenarioTest
 
 @group Drugs
-Drug/Albuterol.xml = ScenarioTest
-Drug/Desflurane.xml = ScenarioTest
-Drug/Epinephrine.xml = ScenarioTest
-Drug/Fentanyl.xml = ScenarioTest
-Drug/Furosemide.xml = ScenarioTest
-Drug/Ketamine.xml = ScenarioTest
-Drug/Midazolam.xml = ScenarioTest
-Drug/Morphine.xml = ScenarioTest
-Drug/Naloxone.xml = ScenarioTest
-Drug/Pralidoxime.xml = ScenarioTest
-Drug/Prednisone.xml = ScenarioTest
-Drug/Propofol.xml = ScenarioTest
-Drug/Rocuronium.xml = ScenarioTest
-Drug/Succinylcholine.xml = ScenarioTest
+Drug/Albuterol.pba = ScenarioTest
+Drug/Desflurane.pba = ScenarioTest
+Drug/Epinephrine.pba = ScenarioTest
+Drug/Fentanyl.pba = ScenarioTest
+Drug/Furosemide.pba = ScenarioTest
+Drug/Ketamine.pba = ScenarioTest
+Drug/Midazolam.pba = ScenarioTest
+Drug/Morphine.pba = ScenarioTest
+Drug/Naloxone.pba = ScenarioTest
+Drug/Pralidoxime.pba = ScenarioTest
+Drug/Prednisone.pba = ScenarioTest
+Drug/Propofol.pba = ScenarioTest
+Drug/Rocuronium.pba = ScenarioTest
+Drug/Succinylcholine.pba = ScenarioTest
 
 @group ConsumeMeal
-#ConsumeMeal/12hrPreOp.xml = ScenarioTest
-#ConsumeMeal/Dehydration.xml = ScenarioTest
-#ConsumeMeal/PostMeal2hr.xml = ScenarioTest
-#ConsumeMeal/SalineIngestion.xml = ScenarioTest
-#ConsumeMeal/Starvation.xml = ScenarioTest
-#ConsumeMeal/WaterIngestion.xml = ScenarioTest
+#ConsumeMeal/12hrPreOp.pba = ScenarioTest
+#ConsumeMeal/Dehydration.pba = ScenarioTest
+#ConsumeMeal/PostMeal2hr.pba = ScenarioTest
+#ConsumeMeal/SalineIngestion.pba = ScenarioTest
+#ConsumeMeal/Starvation.pba = ScenarioTest
+#ConsumeMeal/WaterIngestion.pba = ScenarioTest
 
 @group Combined
-Combined/Gus.xml = ScenarioTest
-Combined/Joel.xml = ScenarioTest
-Combined/Hassan.xml = ScenarioTest
-Combined/Cynthia.xml = ScenarioTest
-Combined/Nathan.xml = ScenarioTest
+Combined/Gus.pba = ScenarioTest
+Combined/Joel.pba = ScenarioTest
+Combined/Hassan.pba = ScenarioTest
+Combined/Cynthia.pba = ScenarioTest
+Combined/Nathan.pba = ScenarioTest
 
 @group Showcase
-Showcase/CombatMultitrauma.xml = ScenarioTest
-Showcase/AsthmaAttack.xml = ScenarioTest
-Showcase/EnvironmentExposure.xml = ScenarioTest
-Showcase/HeatStroke.xml = ScenarioTest
+Showcase/CombatMultitrauma.pba = ScenarioTest
+Showcase/AsthmaAttack.pba = ScenarioTest
+Showcase/EnvironmentExposure.pba = ScenarioTest
+Showcase/HeatStroke.pba = ScenarioTest
 
 @group Miscellaneous
-#Miscellaneous/12hrFastAsCondition.xml = ScenarioTest
-Miscellaneous/AirwayObstructionDeath.xml = ScenarioTest
-Miscellaneous/AnesthesiaMachineVariedConfiguration.xml = ScenarioTest
-Miscellaneous/AsthmaAttackDeath.xml = ScenarioTest
-Miscellaneous/BleedToDeath.xml = ScenarioTest
-Miscellaneous/Comprehensive.xml = ScenarioTest
-#Miscellaneous/FullDay.xml = ScenarioTest
-Miscellaneous/HouseFireSmoke.xml = ScenarioTest
-Miscellaneous/ImpairedAlveolarExchangeFraction.xml = ScenarioTest
-Miscellaneous/ImpairedAlveolarExchangeSurfaceArea.xml = ScenarioTest
-Miscellaneous/MechanicalVentilation.xml = ScenarioTest
-Miscellaneous/MultiDrug.xml = ScenarioTest
-Miscellaneous/TBIandDrugs.xml = ScenarioTest
+#Miscellaneous/12hrFastAsCondition.pba = ScenarioTest
+Miscellaneous/AirwayObstructionDeath.pba = ScenarioTest
+Miscellaneous/AnesthesiaMachineVariedConfiguration.pba = ScenarioTest
+Miscellaneous/AsthmaAttackDeath.pba = ScenarioTest
+Miscellaneous/BleedToDeath.pba = ScenarioTest
+Miscellaneous/Comprehensive.pba = ScenarioTest
+#Miscellaneous/FullDay.pba = ScenarioTest
+Miscellaneous/HouseFireSmoke.pba = ScenarioTest
+Miscellaneous/ImpairedAlveolarExchangeFraction.pba = ScenarioTest
+Miscellaneous/ImpairedAlveolarExchangeSurfaceArea.pba = ScenarioTest
+Miscellaneous/MechanicalVentilation.pba = ScenarioTest
+Miscellaneous/MultiDrug.pba = ScenarioTest
+Miscellaneous/TBIandDrugs.pba = ScenarioTest
 
 @group Compartments
-#Compartments/UserSpecific.xml = ScenarioTest
-Compartments/AnesthesiaMachineCompartments.xml = ScenarioTest
-Compartments/ChymeCompartments.xml = ScenarioTest
-Compartments/LymphCompartments.xml = ScenarioTest
-Compartments/PulmonaryCompartments.xml = ScenarioTest
-Compartments/TemperatureCompartments.xml = ScenarioTest
-Compartments/TissueCompartments.xml = ScenarioTest
-Compartments/UrineCompartments.xml = ScenarioTest
-Compartments/VascularCompartments.xml = ScenarioTest
+#Compartments/UserSpecific.pba = ScenarioTest
+Compartments/AnesthesiaMachineCompartments.pba = ScenarioTest
+Compartments/ChymeCompartments.pba = ScenarioTest
+Compartments/LymphCompartments.pba = ScenarioTest
+Compartments/PulmonaryCompartments.pba = ScenarioTest
+Compartments/TemperatureCompartments.pba = ScenarioTest
+Compartments/TissueCompartments.pba = ScenarioTest
+Compartments/UrineCompartments.pba = ScenarioTest
+Compartments/VascularCompartments.pba = ScenarioTest
